--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,9 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    width: auto;
-    padding: 1rem;
-}
-
 .container {
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: 0.75fr repeat(3, 1fr);
 }
 
 .navbar {
@@ -77,87 +71,15 @@ body {
 }
 
 .dashboard {
-    padding-left: 2rem;
+    padding: 0 2rem;
 }
 
 .content-body {
     grid-column: 2 / 5;
     display: grid;
-    grid-template-columns: 1fr 1fr 0.5fr;
+    grid-template-columns: 2fr 1fr;
 }
 
-.project-header {
-    grid-column: 1 / span 2;
-}
-
-.project-header h2 {
-    margin-bottom: 0;
-    padding-top: 5px;
-}
-.projects {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    background-color: seagreen;
-    gap: 15px;
-    padding: 0 15px;
-}
-
-.cards {
-    text-align: left;
-    border: 3px solid black;
-}
-
-.side-content {
-    grid-column: 3 / 4;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
-.announcements {
-    grid-row: 1 / 2;
-    display: flex;
-    flex-direction: column;
-    background-color: dodgerblue;
-}
-
-.trends {
-    grid-row: 4 / 5;
-    display: flex;
-    flex-direction: column;
-    background-color: hotpink;
-}
-
-.announcement-header {
-    grid-column: 1 / 1;
-}
-
-/* #announcement-item-1 {
-    grid-row: 2 / 3;
-}
-
-#announcement-item-2 {
-    grid-row: 3 / 4;
-}
-
-#announcement-item-3 {
-    grid-row: 4 / 5;
-} */
-
-.trends {
-    grid-row: 2 / 3;
-}
-
-.announcement-item,
-.trends-items {
-    font-size: small;
-}
-
-.announcement-item {
-    padding: 15px;
-}
 li {
     list-style: none;
     font-size: x-large;
@@ -169,4 +91,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    background-color: green;
 }
