--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,13 @@ h4 {
 .header {
     display: grid;
     grid-template-columns: 2fr 1fr;
+    padding-top: 10px;
 }
 
 .search {
     display: flex;
     align-items: center;
+    padding-left: 25px;
 }
 
 .search img {
@@ -59,9 +61,11 @@ h4 {
 }
 
 .user-status {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    padding-right: 30px;
+    gap: 15px;
 }
 
 .greeting {
@@ -140,8 +144,109 @@ button {
 .content-body {
     grid-column: 2 / 5;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 2fr;
     background-color: #8b8c89;
+}
+
+.project-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+}
+
+.project-header {
+    padding-left: 15px;
+    font-weight: 500;
+}
+
+.project-container {
+    display: grid;
+    height: fit-content;
+}
+
+.card {
+    border-radius: 0.5rem;
+    padding: 15px;
+    background-color: #e7ecef;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr;
+    border-left: 8px solid #274c77;
+    box-shadow: 3px 3px 5px #60615f;
+}
+
+.card h2 {
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.card-icons {
+    display: flex;
+    align-self: center;
+    justify-self: end;
+    padding-right: 15px;
+    padding-top: 15px;
+    gap: 15px;
+}
+
+.announcement-header h2,
+.trend-header h2 {
+    margin-left: 15px;
+    font-weight: 500;
+}
+
+.announcements,
+.trends {
+    display: grid;
+    background-color: #e7ecef;
+    border-radius: 0.5rem;
+    margin: 15px;
+    padding: 20px;
+    border-left: 8px solid #274c77;
+    box-shadow: 3px 3px 5px #60615f;
+}
+
+.announcement {
+    font-size: smaller;
+}
+
+.trends {
+    padding: 10px;
+}
+
+#site-maintenance {
+    margin-top: 0;
+}
+
+.user-message {
+    display: flex;
+    flex-direction: column;
+}
+
+.message {
+    font-size: smaller;
+}
+
+.trend {
+    display: flex;
+    gap: 15px;
+    padding: 8px;
+    align-items: center;
+}
+
+.announcements h3 {
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.trend img {
+    height: 3rem;
+}
+
+#maul {
+    width: 48px;
 }
 
 li {
